--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <li><a href="rainbow.html">Our New Rainbow</a></li>
   <li><a href="news-2.html">A Red Rebellion</a></li>
 </ul>
+<h2>Navigation</h2>
 <ul>
+  <li>
+    <a href="about/index.html">About Us</a>
+  </li>
   <li style="color: #F90">
     <a href="orange.html">The Orange Page</a>
   </li>
@@ -26,6 +30,6 @@
     <a href="rainbow.html">The Rainbow Page</a>
   </li>
 </ul>
-</ul>
+
 </body>
 </html>
